# optokon

./: README.md  pyproject.toml
examples/: examples.py
src/optokon/: __init__.py  gui.py  optokon_PM4212.py  optokon_gui.py
